--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -164,4 +164,14 @@
 	box-shadow: 0px 0px 10px #0A193B;
 }
 
+.mobile-text-results{
+	font-size: 40px;
+}
+
+#events-cross-mobile{
+	height:25px;
+	width:25px;
+	transform: translate3d(0,70%,0);
+
+}
 
