--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -217,7 +217,7 @@
 		<div class="container container-head">
 			<div class="row text-center head-row" *ngIf="!mobile">
 				<div class="col-10" >
-					<p class="text-left text-md-center"> <img src="assets/infra_head.png" id="infra-head" class="image-head"></p>
+					<p class="text-left text-md-center"> <img src="assets/marketing_head.png" id="marketing-head" class="image-head"></p>
 				</div>
 				<div class="col-2" >
 					<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
