fixed prasanna's name

--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -361,7 +361,7 @@
 			<div class="row">
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Prasanna-min.png" class="manager-img">
-					<p class="manager-name text-center">Prasanna Talwane</p>
+					<p class="manager-name text-center">Prasanna Telawane</p>
 					<p class="manager-num text-center">917 258 5090</p>
 				</div>
 			</div>
