fixed spacing in events in mobile view

--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -87,7 +87,7 @@
 		</div>
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-7">
 			<div class="text">
-				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0;">
+				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0;margin-bottom: 16px;">
 					<div class="col-12 text-center">
 						<p class="head text-uppercase" style="margin-bottom:0">{{event.name}}</p>
 					</div>
