--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -74,6 +74,7 @@
 	width:300px;
 	height: 275px;
 	position: relative;
+	margin:auto;
 }
 
 .medal-img{
@@ -101,12 +102,6 @@
 		transform: translateY(0px);
 	}
 
-	.image-head{
-		height:30px;
-		object-fit: cover;
-		margin-bottom: -16px;
-		margin-left: -16px;
-	}
 
 	#events-cross{
 		margin-top:50%;
