--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -15,7 +15,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/creatives.png" class="glide-img" (click)="redirect('departmentdetail/creatives')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/creatives_main.png" class="glide-img" (click)="redirect('departmentdetail/creatives')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase ">
             02
