--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -148,7 +148,7 @@
 <div class="container-fluid" *ngIf="managers=='infrastructure'">
 	<!-- Heading part -->
 		<!-- For desktop -->
-		<div class="container container-head">
+		<div class="container container-head" id="infra-container-head">
 			<div class="row text-center head-row" *ngIf="!mobile">
 				<div class="col-10" >
 					<p class="text-left text-md-center"> <img src="assets/infra_head.png" id="infra-head" class="image-head"></p>
@@ -214,7 +214,7 @@
 <div class="container-fluid" *ngIf="managers=='marketing'">
 	<!-- Heading part -->
 		<!-- For desktop -->
-		<div class="container container-head">
+		<div class="container container-head" id="marketing-container-head">
 			<div class="row text-center head-row" *ngIf="!mobile">
 				<div class="col-10" >
 					<p class="text-left text-md-center"> <img src="assets/marketing_head.png" id="marketing-head" class="image-head"></p>
