--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -16,11 +16,11 @@
 				<div class="col-12 manager-col">
 					<p class="manager-num text-center mt-2 mb-0">1st</p>
 					<div class="image">
-						<img src="https://image.shutterstock.com/image-photo/bright-spring-view-cameo-island-260nw-1048185397.jpg" class="manager-img">
+						<img src="assets/results/1.png" class="manager-img">
 						<div class="medal-img"><img src="assets/gold.png"></div>
-						<a href="https://www.facebook.com/100038371443841/videos/243063870315993/" class="round-button"><span class="fa fa-play" id="play"></span></a>
+						<a href="https://www.facebook.com/story.php?story_fbid=250180469572878&id=100037427807045" target="_blank" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
-					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
+					<p class="manager-name text-center">Anchal Yadav</p>
 				</div>
 			</div>
 		</div>
@@ -30,11 +30,11 @@
 				<div class="col-12 manager-col">
 					<p class="manager-num text-center mt-2 position-label mb-0">2nd</p>
 					<div class="image">
-						<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__340.jpg" class="manager-img">
+						<img src="assets/results/2.png" class="manager-img">
 						<div class="medal-img"><img src="assets/silver.png"></div>
-						<a href="https://www.facebook.com/100038371443841/videos/243063870315993/" class="round-button"><span class="fa fa-play" id="play"></span></a>
+						<a href="https://www.facebook.com/story.php?story_fbid=243064550315925&id=100038371443841" target="_blank" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
-					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
+					<p class="manager-name text-center">Rahul Kumawat</p>
 				</div>
 			</div>
 		</div>
@@ -44,11 +44,11 @@
 				<div class="col-12 manager-col">
 					<p class="manager-num text-center mt-2 position-label  mb-0">3rd</p>
 					<div class="image">
-						<img src="https://www.w3schools.com/w3css/img_lights.jpg" class="manager-img">
+						<img src="assets/results/3.png" class="manager-img">
 						<div class="medal-img"><img src="assets/bronze.png"></div>
-						<a href="https://www.facebook.com/100038371443841/videos/243063870315993/" class="round-button"><span class="fa fa-play" id="play"></span></a>
+						<a href="https://www.facebook.com/story.php?story_fbid=2719501461627084&id=100007017701738" target="_blank" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
-					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
+					<p class="manager-name text-center">Rajat Mehra</p>
 				</div>
 			</div>
 		</div>
