edited homepage content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,7 @@
 				<p class="line"></p>
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left">
-				<p class="description-text">This is probably the question you’re most curious to know the answer to!
-Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management.  
-All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.</p>
+				<p class="description-text">This is probably the question you’re most curious to know the answer to! Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as leadership, professionalism, pressure handling and time management. All in all, if you want to make memories and build relationships, come join us. Be a part of the Techfest family.</p>
 
 			</div>
 		</div>
@@ -24,7 +22,7 @@ All in all, if you’re looking for opportunities to create memories and build r
 				<p class="line"></p>
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left">
-				<p class="description-text">"Techfest is what the team wants." This one line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly charged individuals with new perspectives, new ideas and a whole lot of enthusiasm! So come, join Team Techfest, and gain insights to how things work behind the scenes of one of the largest festivals in the World, all while having fun and learning new skills!</p>
+				<p class="description-text">"Techfest is what the team wants." This line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly motivated individuals with fresh perspectives, innovative ideas and a whole lot of enthusiasm! So come, join Team Techfest, and gain insights about how things work behind the scenes of one of the largest Sci-Tech festivals in the world, all while having fun and learning new skills!</p>
 
 			</div>
 		</div>
