--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -300,8 +300,8 @@ body{
 		 /*background-size: contain;*/
 	background-position: bottom;
 	background-attachment: fixed;
-	  background-repeat: no-repeat;
-	  background-size: cover;
+	  background-repeat: repeat;
+	  background-size: contain;
 	   min-height:100vh;
 	  	max-width:100vw;
 	}
