--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -298,7 +298,7 @@ body{
 		background: url("/assets/backg_phone.png");
 		overflow:hidden;
 		 /*background-size: contain;*/
-	background-position: bottom;
+	background-position: center;
 	background-attachment: fixed;
 	  background-repeat: repeat;
 	  background-size: contain;
