--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -89,17 +89,18 @@
 
 body{
 	background: url("/assets/backg.jpg");
-	 background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-   min-height:100vh;
-  	max-width:100vw;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height:100vh;
+	max-width:100vw;
   	overflow-x:hidden;
-
   	/*border:2px solid red;*/
   	/*overflow: hidden;*/
 }
+
+
 
 .safari-class{
 	background-repeat: repeat-y;
@@ -294,15 +295,27 @@ body{
 		margin-top: 32px;
 	}
 
-	body{
+	.body-mobile-class{
 		background: url("/assets/backg_phone.png");
 		overflow:hidden;
-		 /*background-size: contain;*/
+		/*background-size: contain;*/
 		background-position: bottom;
 		background-attachment: fixed;
-		  background-repeat: no-repeat;
-		  background-size: cover;
-	   min-height:100vh;
+		background-repeat: no-repeat;
+		background-size: cover;
+	   	min-height:100vh;
+	  	max-width:100vw;
+	}
+
+	.body-ios-mobile{
+		background: url("/assets/backg_phone.png");
+		overflow:hidden;
+		/*background-size: contain;*/
+		background-position: bottom;
+		background-attachment: fixed;
+		background-repeat: repeat;
+		background-size: contain;
+	   	min-height:100vh;
 	  	max-width:100vw;
 	}
 
