--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -295,19 +295,18 @@ body{
 		margin-top: 32px;
 	}
 
-	body.body-mobile-class{
+/*	body.body-mobile-class{
 		background: url("/assets/backg_phone.png");
 		overflow:hidden;
-		/*background-size: contain;*/
 		background-position: bottom;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
 	   	min-height:100vh;
 	  	max-width:100vw;
-	}
+	}*/
 
-	body.body-ios-mobile{
+	body{
 		background: url("/assets/backg_phone.png");
 		overflow:hidden;
 		/*background-size: contain;*/
