--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -84,7 +84,7 @@
 .text1 {
 	animation-name: slideDown1;
 	opacity: 0;
-	animation-duration: 2s;
+	animation-duration: 2.5s;
 	animation-iteration-count: 1;
 	animation-direction: reverse;
 	animation-timing-function: cubic-bezier(.76,.05,.86,.06);
@@ -95,8 +95,8 @@
 	top: 0;
 	opacity: 0;
 	animation-name: slideDown;
-	animation-delay: 0s;
-	animation-duration: 2s;
+	animation-delay: 2.5s;
+	animation-duration: 2.5s;
 	animation-direction: reverse;
 	animation-iteration-count: 1;
 	animation-timing-function: cubic-bezier(.76,.05,.86,.06);
@@ -106,15 +106,20 @@
 	top: 0;
 	opacity: 0;
 	animation-name: slideDownlast;
-	animation-duration: 2s;
-	animation-delay: 0s;
+	animation-duration: 2.5s;
+	animation-delay: 5s;
 	animation-direction: reverse;
 	animation-iteration-count: 1;
 	animation-timing-function: cubic-bezier(.76,.05,.86,.06);
 }
 
-.text1class,.text2class,.text3class{
-	opacity:0;
+#textfinal {
+	position: absolute;
+	top: 0;
+	opacity: 1;
+	animation-name: showlast;
+	animation-duration: 7.5s;
+	animation-iteration-count: 1;
 }
 
 @keyframes showlast {
@@ -157,7 +162,7 @@
 
 @media screen and (max-width: 675px){
 	.animated-text{
-		font-size: 20px;
+		font-size: 21px;
 		padding-left:7.5%;
 		margin:auto;
 	}
