--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
 						<p class="lighter">You are</p>
 					</div>
 					<div class="d-inline-block animated-main-text">
-						<p #text1 class="text1class">Amazing</p><br><p class="text2class">Great</p><br><p class="text3class">part of Techfest</p>
+						<p class="text1">Amazing</p><br><p class="text2">Great</p><br><p class="text3">part of Techfest</p><br><p id="textfinal">part of Techfest</p>
 					</div>
 				</div>
 			</div>
