fixed homepage text

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left" id="animation-container">
 				<div class="text-div" style="margin-left:0">
-					<p class="description-text">You are the steam that blows our engine get onboard!</p>
+					<p class="description-text">You are the steam that blows our engine. Get onboard!</p>
 					<p class="description-text">Don't be a guest to your own fest</p>
 					<p class="description-text">It starts with you</p>
 				</div>
