--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -10,7 +10,7 @@
             01
           </div>
           <div class="text-name text-center text-uppercase">
-            events
+            <span class="lower-text">events</span>
           </div>
         </li>
         <li class="glide__slide">
@@ -21,7 +21,7 @@
             02
           </div>
           <div class="text-name text-center text-uppercase">
-            creatives
+            <span class="lower-text">creatives</span>
           </div>
         </li>
         <li class="glide__slide">
@@ -32,7 +32,7 @@
             03
           </div>
           <div class="text-name text-center text-uppercase">
-           web
+           <span class="lower-text">web</span>
           </div>
         </li>
         <li class="glide__slide">
@@ -43,7 +43,7 @@
             04
           </div>
           <div class="text-name text-center text-uppercase">
-            infrastructure
+            <span class="lower-text">infrastructure</span>
           </div>
         </li>
 
@@ -55,7 +55,7 @@
             05
           </div>
           <div class="text-name text-center text-uppercase">
-            media & publicity
+            <span class="lower-text">media & publicity</span>
           </div>
         </li>
 
@@ -67,7 +67,7 @@
             06
           </div>
           <div class="text-name text-center text-uppercase">
-            hospitality
+            <span class="lower-text">hospitality</span>
           </div>
         </li>
 
@@ -79,7 +79,7 @@
             07
           </div>
           <div class="text-name text-center text-uppercase">
-            food & beverages
+            <span class="lower-text">food & beverages</span>
           </div>
         </li>
 
@@ -91,7 +91,7 @@
             08
           </div>
           <div class="text-name text-center text-uppercase">
-            marketing
+            <span class="lower-text">marketing</span>
           </div>
         </li>        
       </ul>
