--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,8 +24,8 @@
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left" id="animation-container">
 				<div class="text-div" style="margin-left:0">
 					<p class="description-text">You are the steam that blows our engine. Get onboard!</p>
-					<p class="description-text">Don't be a guest to your own fest</p>
-					<p class="description-text">It starts with you</p>
+					<p class="description-text">Don't be a guest to your own fest.</p>
+					<p class="description-text">It starts with you!</p>
 				</div>
 				<div class="row animated-text text-uppercase">
 					<div class="d-inline-block">
